...
    <string name="isFollower">Following You</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="title_activity_login_user">LoginUser</string>
    <string name="NewUser">New User</string>
    <string name="title_activity_habit_events">HabitEvents</string>
    <string name="search">Filter</string>
    <string name="hint">keywords</string>
    <string name="habithint">Event filter</string>
    <string name="addEvent">Add Event</string>
    <string name="editEvent">Edit Event</string>
    <string name="locationadd">Add Location</string>
    <string name="comment">Comment</string>
...
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="todayhabit">Today\'s Habits:</string>
    <string name="today">Today</string>
    <string name="all">All</string>
    <string name="history">History</string>
</resources>

