...
    android:background="@android:color/holo_blue_dark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="main.habitivity.activities.LoginUser"
    tools:showIn="@layout/activity_login_user">

    <EditText
        android:id="@+id/userName"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/NewUser"
...
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        tools:text="Username ExampleUser245 Unavailable" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="OKAY"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintEnd_toEndOf="parent"
...
