...
                        android:layout_width="77dp"
                        android:layout_height="38dp"
                        app:layout_constraintLeft_toRightOf="@+id/buttonLeftConstraint"
                        app:layout_constraintTop_toBottomOf="@+id/topSpacer">

                        <Button
                            android:id="@+id/buttonMiddle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:text="@string/history"
                            android:textAlignment="center" />
                    </android.support.constraint.ConstraintLayout>
...
